--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ header nav ul {
 }
 header nav ul li a {
   padding: 30px 35px;
-  font-size: 1.55vw;
+  font-size: 30px;
   text-decoration: none;
   color: #fff;
   text-shadow: 1px 1px 1px #333;
